--- a/gelato.html
+++ b/gelato.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Junction Cafe - Gelato Menu">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Junction Cafe - Gelato Menu" />
     <title>Junction Cafe - Gelato</title>
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
 
     <style>
         :root {
@@ -22,7 +22,11 @@
         }
         .font-playfair { font-family: 'Playfair Display', serif; }
         .font-inter { font-family: 'Inter', sans-serif; }
-        .nav-link { position: relative; transition: color 0.3s ease; }
+
+        .nav-link {
+            position: relative;
+            transition: color 0.3s ease;
+        }
         .nav-link::after {
             content: '';
             position: absolute;
@@ -37,12 +41,79 @@
         .nav-link.active::after {
             width: 100%;
         }
-        .cta-button { transition: all 0.3s ease; }
+
+        .cta-button {
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
         .cta-button:hover {
             transform: translateY(-3px);
             box-shadow: 0 10px 25px rgba(0,0,0,0.3);
         }
-        html { scroll-behavior: smooth; }
+
+        html {
+            scroll-behavior: smooth;
+        }
+
+        /* Responsive image sizing */
+        main {
+            min-height: 100vh;
+            padding-top: 8rem;
+            padding-bottom: 4rem;
+            background-color: #f9fafb; /* Tailwind gray-50 equivalent */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
+        main > div {
+            max-width: 1024px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 2.5rem;
+        }
+        main img {
+            border-radius: 0.5rem;
+            box-shadow: 0 10px 15px rgba(0,0,0,0.1);
+            object-fit: contain;
+            width: 100%;
+            height: auto;
+        }
+
+        /* Mobile menu styling */
+        #mobile-menu {
+            background-color: rgba(0,0,0,0.95);
+            position: fixed;
+            top: 5rem; /* below fixed navbar */
+            left: 0; right: 0;
+            z-index: 50;
+            display: none;
+            flex-direction: column;
+            padding: 1rem 0;
+        }
+        #mobile-menu.show {
+            display: flex;
+        }
+        #mobile-menu a {
+            display: block;
+            color: white;
+            padding: 0.75rem 1.5rem;
+            text-align: center;
+            text-decoration: none;
+            font-size: 1.125rem;
+            transition: background-color 0.3s ease;
+        }
+        #mobile-menu a:hover {
+            background-color: #444;
+        }
+
+        @media (min-width: 768px) {
+            main > div {
+                gap: 3.5rem;
+            }
+        }
     </style>
 </head>
 <body class="font-inter bg-white text-black">
@@ -54,9 +125,10 @@
                 <!-- Logo -->
                 <div class="flex-shrink-0">
                     <a href="index.html">
-                        <img src="images/junction-9-and-three-quarters.png" alt="Junction Cafe Logo" class="h-44 w-auto ml-20" />
+                        <img src="images/junction-9-and-three-quarters.png" alt="Junction Cafe Logo" class="h-40 sm:h-44 w-auto ml-4 sm:ml-20" />
                     </a>
                 </div>
+
                 <!-- Desktop Navigation -->
                 <div class="hidden md:flex space-x-8">
                     <a href="index.html" class="nav-link">Home</a>
@@ -68,6 +140,7 @@
                     <a href="memorabilia.html" class="nav-link">Memorabilia</a>
                     <a href="contact.html" class="nav-link">Contact Us</a>
                 </div>
+
                 <!-- Mobile Menu Button -->
                 <div class="md:hidden">
                     <button id="mobile-menu-button" class="text-white focus:outline-none focus:ring-2 focus:ring-white" aria-label="Toggle menu">
@@ -78,22 +151,25 @@
                 </div>
             </div>
         </div>
+
         <!-- Mobile Navigation Menu -->
-        <div id="mobile-menu" class="hidden md:hidden bg-black">
-            <div class="px-2 pt-2 pb-3 space-y-1">
-                <a href="index.html" class="block px-3 py-2 text-white hover:bg-gray-800 rounded">Home</a>
-                <a href="menu.html" class="block px-3 py-2 text-white hover:bg-gray-800 rounded">Menu</a>
-                <a href="gelato.html" class="block px-3 py-2 text-white hover:bg-gray-800 rounded">Gelato</a>
-                <a href="about.html" class="block px-3 py-2 text-white hover:bg-gray-800 rounded">About</a>
-            </div>
+        <div id="mobile-menu" class="hidden md:hidden">
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="gelato.html" class="active">Gelato</a>
+            <a href="about.html">About</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="memorabilia.html">Memorabilia</a>
+            <a href="contact.html">Contact Us</a>
         </div>
     </nav>
 
     <!-- Gelato Menu Images Section -->
-    <main class="min-h-screen flex flex-col justify-center items-center pt-32 pb-16 px-4 bg-gray-50">
-        <div class="max-w-4xl w-full flex flex-col items-center space-y-10">
-            <img src="images/Dessert menu 02.jpg" alt="Gelato and Dessert Menu Page 1" class="rounded-lg shadow-lg w-full object-contain" />
-            <img src="images/Dessert menu 01.jpg" alt="Gelato and Dessert Menu Page 2" class="rounded-lg shadow-lg w-full object-contain" />
+    <main>
+        <div>
+            <img src="images/Dessert menu 02.jpg" alt="Gelato and Dessert Menu Page 1" />
+            <img src="images/Dessert menu 01.jpg" alt="Gelato and Dessert Menu Page 2" />
         </div>
     </main>
 
@@ -101,14 +177,12 @@
     <footer class="bg-black text-white py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
-                <!-- About Section -->
                 <div>
                     <h3 class="font-playfair text-xl font-bold mb-4">Junction Cafe</h3>
                     <p class="text-gray-300 text-sm leading-relaxed">
                         Where exceptional dining meets artisanal gelato in perfect harmony. Experience the finest flavors and warmest hospitality.
                     </p>
                 </div>
-                <!-- Quick Links -->
                 <div>
                     <h3 class="font-playfair text-xl font-bold mb-4">Quick Links</h3>
                     <ul class="space-y-2 text-sm">
@@ -118,26 +192,16 @@
                         <li><a href="memorabilia.html" class="text-gray-300 hover:text-white transition">Memorabilia</a></li>
                     </ul>
                 </div>
-                <!-- Contact Info -->
                 <div>
                     <h3 class="font-playfair text-xl font-bold mb-4">Contact</h3>
-                    <p class="text-gray-300 text-sm mb-2">
-                        <strong>Address:</strong> 123 Main Street, Your City
-                    </p>
-                    <p class="text-gray-300 text-sm mb-2">
-                        <strong>Phone:</strong> (123) 456-7890
-                    </p>
-                    <p class="text-gray-300 text-sm">
-                        <strong>Email:</strong> info@junctioncafe.com
-                    </p>
+                    <p class="text-gray-300 text-sm mb-2"><strong>Address:</strong> 123 Main Street, Your City</p>
+                    <p class="text-gray-300 text-sm mb-2"><strong>Phone:</strong> (123) 456-7890</p>
+                    <p class="text-gray-300 text-sm"><strong>Email:</strong> <a href="mailto:info@junctioncafe.com">info@junctioncafe.com</a></p>
                 </div>
             </div>
-            <!-- Divider -->
             <div class="border-t border-gray-700 pt-8">
                 <div class="flex flex-col md:flex-row justify-between items-center">
-                    <p class="text-gray-400 text-sm">
-                        &copy; 2025 Junction Cafe. All rights reserved.
-                    </p>
+                    <p class="text-gray-400 text-sm">&copy; 2025 Junction Cafe. All rights reserved.</p>
                     <div class="flex space-x-6 mt-4 md:mt-0">
                         <a href="#" class="text-gray-400 hover:text-white text-sm transition">Privacy Policy</a>
                         <a href="#" class="text-gray-400 hover:text-white text-sm transition">Terms of Service</a>
@@ -147,13 +211,14 @@
         </div>
     </footer>
 
-    <!-- JavaScript for Mobile Menu Toggle -->
     <script>
         const mobileMenuButton = document.getElementById('mobile-menu-button');
         const mobileMenu = document.getElementById('mobile-menu');
+
         mobileMenuButton.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
+
         document.addEventListener('click', (event) => {
             const isClickInside = mobileMenuButton.contains(event.target) || mobileMenu.contains(event.target);
             if (!isClickInside && !mobileMenu.classList.contains('hidden')) {
